--- a/deploy/k8s/deployment.yaml.tmpl
+++ b/deploy/k8s/deployment.yaml.tmpl
@@ -43,8 +43,8 @@ spec:
         resources:
           limits:
             cpu: 1000m
-            memory: 2048Mi
+            memory: 4Gi
           requests:
             cpu: 1000m
-            memory: 2048Mi
+            memory: 4Gi
       restartPolicy: Never
