--- a/deploy/k8s/deployment.yaml.tmpl
+++ b/deploy/k8s/deployment.yaml.tmpl
@@ -11,6 +11,9 @@ metadata:
   name: ${DEPLOY_NAME}
 spec:
   template:
+    metadata:
+        annotations:
+              iam.amazonaws.com/role: arn:aws:iam::444914307613:role/search-load-test-role
     spec:
       nodeSelector:
         role.vivareal.io/ondemand: "true"
@@ -31,16 +34,6 @@ spec:
           value: "${RUN_OPTS}"
         - name: USER_TIMEZONE
           value: ${USER_TIMEZONE}
-        - name: AWS_ACCESS_KEY_ID
-          valueFrom:
-            secretKeyRef:
-              key: AWS_ACCESS_KEY_ID
-              name: aws-credentials
-        - name: AWS_SECRET_ACCESS_KEY
-          valueFrom:
-            secretKeyRef:
-              key: AWS_SECRET_ACCESS_KEY
-              name: aws-credentials
         - name: SLK_TOKEN
           valueFrom:
             secretKeyRef:
